Start to work on pet image upload
